--- a/public/css/main.css
+++ b/public/css/main.css
@@ -166,6 +166,7 @@ nav ul a:hover {
     margin-bottom: 0;
     text-align: center;
     float :none;
+    font-size: 2em;
   }
 
   #tag {
@@ -174,6 +175,7 @@ nav ul a:hover {
     /*margin-top: 20;*/
     float: none;
     text-align:center;
+    font-size: 1em;
   }
 
   .circular {
@@ -190,6 +192,8 @@ nav ul a:hover {
     top:50%;
     left:48%;
     margin:-100px 0 0 -150px;
+    /*width: 90%;
+    height: 90%;*/
 
 
   }
