--- a/public/css/main.css
+++ b/public/css/main.css
@@ -166,7 +166,7 @@ nav ul a:hover {
     margin-bottom: 0;
     text-align: center;
     float :none;
-    font-size: 2em;
+    font-size: 3em;
   }
 
   #tag {
@@ -175,7 +175,7 @@ nav ul a:hover {
     /*margin-top: 20;*/
     float: none;
     text-align:center;
-    font-size: 1em;
+    font-size: 2em;
   }
 
   .circular {
@@ -194,6 +194,8 @@ nav ul a:hover {
     margin:-100px 0 0 -150px;
     /*width: 90%;
     height: 90%;*/
+    width: 200px;
+    height: 200px;
 
 
   }
