--- a/public/css/main.css
+++ b/public/css/main.css
@@ -194,6 +194,12 @@ nav ul a:hover {
     margin:-100px 0 0 -150px;
     /*width: 90%;
     height: 90%;*/
+    width: 250px;
+    height: 250px;
+    border-radius: 11em;
+    -webkit-border-radius: 11em;
+    -moz-border-radius: 11em;
+    background-size: 100%;
 
 
   }
