--- a/public/css/main.css
+++ b/public/css/main.css
@@ -189,9 +189,9 @@ nav ul a:hover {
     padding-right: 10%;*/
     float:none;
     align: center;
-    top:50%;
-    left: 50%;
-    margin:-100px 0 0 -150px;
+    /*top:50%;
+    left: 48%;
+    margin:-100px 0 0 -150px;*/
     width: 250px;
     height: 250px;
     border-radius: 11em;
