--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,9 +179,11 @@ nav ul a:hover {
   }
 
   .circular {
-    margin:10%;
-    margin-left: 2em;
+    margin:0;
+    /*margin-left: 2em;*/
     padding: 0;
+    top: 0;
+    left: 0;
     margin-top: 60%;
     /*margin-left:20%;
     margin-right: 20%;*/
