--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,12 +179,16 @@ nav ul a:hover {
   }
 
   .circular {
-    margin: 15%;
+    /*margin: 0 5% 0 5%;*/
     /*margin-left: 2em;*/
-    padding: 0;
+    /*padding: 0;
     top: 0;
-    left: 0;
+    left: 0;*/
     margin-top: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
     /*margin-left:20%;
     margin-right: 20%;*/
     /*padding-left: 10%;
