--- a/public/css/main.css
+++ b/public/css/main.css
@@ -184,7 +184,7 @@ nav ul a:hover {
     /*padding: 0;
     top: 0;
     left: 0;*/
-    margin-top: 50%;
+    margin-top: 45%;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -206,5 +206,9 @@ nav ul a:hover {
     background-size: 100%;
 
 
+  }
+
+  #aboutdiv {
+    margin-top: 45%;
   }
 }
