--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,22 +1,36 @@
 <html>
 <head>
+  <script src="http://code.jquery.com/jquery-2.1.0.min.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Questrial' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/main.css">
+  <title>Lily Pace</title>
   <script language="javascript" type="text/javascript" src="jquery-1.8.3.js"></script>
+  <script src="/javascript/jquery.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0;">
 </head>
 
 <body>
   <nav>
-  <ul class = "navbar">
-    <li class="links"><a href="/">Home</a></li>
-    <li class="links"><a href="#allaboutme">About</a></li>
-    <li class="links"><a href="/posts">Blog</a></li>
-    <li class="links"><a href="#contactme">Contact</a></li>
-  </ul>
-</nav>
+    <ul class = "navbar">
+      <li class="links"><a href="/">Home</a></li>
+      <li class="links"><a href="#allaboutme">About</a></li>
+      <li class="links"><a href="/posts">Blog</a></li>
+      <li class="links"><a href="#contactme">Contact</a></li>
+    </ul>
+  </nav>
+  <div id ="mobile">
+    <a href="#" id="menu-icon"></a>
+    <ul id = "mobilenav">
+      <li class="links"><a href="/">Home</a></li>
+      <li class="links"><a href="#allaboutme">About</a></li>
+      <li class="links"><a href="/posts">Blog</a></li>
+      <li class="links"><a href="#contactme">Contact</a></li>
+    </ul>
+  </div>
+
+
   <!-- <header>
     <a id="logo"></a>
         <a href="#" id="menu-icon"></a>
