--- a/views/posts.erb
+++ b/views/posts.erb
@@ -1,10 +1,11 @@
 <!--
 <a href="url">Title</a> -->
-<h1 class = "title">Blog Entries by Date</h1>
+<h1 class = "blogpage">Blog Entries by Date</h1>
+<div id ="blogdiv">
 <% @posts.each do |post| %>
-   <ul class="navbar">
-     <li class ="links" ><a href= "<%= post.url %>"><%= post.title %></a></li>
-     <li class ="links"><a class="date" href= "<%= post.url %>"><%= post.date %></a></li>
-     <p class ="links"><a class="post" href= "<%= post.url %>"><%= post.post %></a></p>
-   </ul>
+     <!-- <li class ="links" ><a class="posttitle" href= "<%= post.url %>"><%= post.title %></a></li>
+     <li class ="links"><a class="postdate" href= "<%= post.url %>"><%= post.date %></a></li> -->
+     <p class="posttext"><%= post.post %></p>
+     <a class ="fulltext" href="<%= post.url %>">Read Full Post</a>
 <% end %>
+</div>
