--- a/public/css/main.css
+++ b/public/css/main.css
@@ -29,6 +29,7 @@ nav {
   background: black;
   width: 100%;
   margin-right: 5%;
+  z-index: 201;
 }
 
 nav ul {
@@ -97,6 +98,9 @@ nav ul a:hover {
   transition-duration: 1s;
   -webkit-duration: 1s;
   -moz-duration: 1s;
+  	/*box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);*/
 }
 
 .circular:hover {
@@ -156,9 +160,152 @@ nav ul a:hover {
   font-size: 3em;
 }
 
+/*BLOG*/
+
+.blogtitle {
+  text-decoration: none;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+}
+
+.blogdate {
+  text-decoration: none;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+
+}
+.post {
+  color: white;
+  text-align: center;
+  font-family: 'Questrial';
+  letter-spacing: 1px;
+}
+
+.postbox {
+  /*margin-top: 90px;*/
+  z-index: -5;
+  /*position: relative;*/
+  color: white;
+  left: 0;
+  padding: 2%;
+  padding-top: .5%;
+  background-color:rgba(0,0,0,0.6);
+  text-shadow: 2px 2px 2px black;
+
+}
+
+.datebox {
+  /*margin-top: 90px;*/
+  z-index: -5;
+  /*position: relative;*/
+  left: 0;
+  padding: 2%;
+  padding-top: .5%;
+  background-color: rgba(252,63,63,.7);
+  text-shadow: 1px 1px 2px white;
+}
+
+.titlebox {
+  /*margin-top: 90px;*/
+  z-index: -5;
+  /*position: relative;*/
+  left: 0;
+  padding: 2%;
+  padding-top: .5%;
+  background-color: rgba(252,252,252,.7);
+  text-shadow: 1px 1px 2px white;
+}
+.blogpage {
+  display: hidden;
+}
+
+#menu-icon {
+  width: 54px;
+  height: 54px;
+  display: none;
+  top: 0;
+  left: 0;
+  position: fixed;
+  float: left;
+  background: dimgrey url('../images/menu-icon.png') center;
+  background-size: 85%;
+  z-index: 202;
+  transition-duration: 1s;
+  -webkit-duration: 1s;
+  -moz-duration: 1s;
+}
+
+#mobilenav {
+  width: 100px;
+  display: hidden;
+  position: fixed;
+  float: left;
+  background: dimgrey;
+  z-index: 201;
+  border: 5px solid dimgrey;
+  background: black;
+  list-style: none;
+  /*left: 0;*/
+  left: -150;
+  top: 38px;
+  /*top: -210;*/
+  padding: 15px;
+  padding-left: 22px;
+  transition-duration: 1s;
+  -webkit-duration: 1s;
+  -moz-duration: 1s;
+}
+
+#mobilenav a {
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  font-size: 1.75em;
+  transition-duration: 1s;
+  -webkit-duration: 1s;
+  -moz-duration: 1s;
+}
+
+
 /*MEDIA QUERIES*/
 
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 768px) {
+  #mobilenav {
+    display: block;
+  }
+
+  nav ul a {
+    display: none;
+  }
+
+  #menu-icon {
+    display: inline-block;
+  }
+
+  #menu-icon:hover {
+    background: #FC3F3F url('../images/menu-icon.png') center;
+    background-size: 85%;
+    transition-duration: 1s;
+    -webkit-duration: 1s;
+    -moz-duration: 1s;
+  }
+
+  #mobile:hover #mobilenav {
+    left: 0;
+    transition-duration: 1s;
+    -webkit-duration: 1s;
+    -moz-duration: 1s;
+
+  }
+
+  #mobilenav a:hover {
+    color: #FC3F3F;
+    transition-duration: 1s;
+    -webkit-duration: 1s;
+    -moz-duration: 1s;
+  }
 
   #name {
     width: 100%;
@@ -166,7 +313,7 @@ nav ul a:hover {
     margin-bottom: 0;
     text-align: center;
     float :none;
-    font-size: 3.75em;
+    /*font-size: 3.75em;*/
   }
 
   #tag {
@@ -175,7 +322,7 @@ nav ul a:hover {
     /*margin-top: 20;*/
     float: none;
     text-align:center;
-    font-size: 2em;
+    /*font-size: 2em;*/
   }
 
   .circular {
@@ -204,11 +351,24 @@ nav ul a:hover {
     -webkit-border-radius: 11em;
     -moz-border-radius: 11em;
     background-size: 105%;
+  }
 
-
+  .circular:hover {
+    background: url('../images/me13.jpg');
+    background-size :110%;
   }
 
   #aboutdiv {
     margin-top: 50%;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  #name {
+    font-size: 3.75em;
+  }
+
+  #tag {
+    font-size: 2em;
   }
 }
