--- a/views/index.erb
+++ b/views/index.erb
@@ -10,11 +10,12 @@
 <!-- <h1 class="name" id = "myname">Lily Pace</h1>
 <div class="circular" id="portrait"></div>
 <h1 class = "name" id="tagline">Art. Design. Code.</h1> -->
-<A NAME="allaboutme">
+<!-- <A NAME="allaboutme"> -->
 <!-- ABOUT ME -->
-
 <!-- </div> -->
+<A NAME="allaboutme">
 <div class="textdiv" id = "aboutdiv">
+  <!-- <A NAME="allaboutme"> -->
     <!-- <div class="bio"> -->
     <!-- <h1 id="aboutme">About Me</h1> -->
     <!-- <div class="squarepic" id="about"></div> -->
@@ -33,12 +34,12 @@
     </div>
 <div class="squarepic" id="about"></div>
 </div>
-<A NAME="contactme">
-
+<!-- <A NAME="contactme"> -->
 <!-- CONTACT -->
 <!--
 <h1 class="title">Contact Me</h1> -->
 <div class="textdiv">
+  <A NAME="contactme">
   <h1 class="title">Contact Me</h1>
     <a href="http://www.facebook.com/lilard"><img class = "contactimage" src="/images/facebook.png"></a>
     <a href="http://www.twitter.com/lilyfromseattle"><img class = "contactimage" src="/images/twitter.png"></a>
