--- a/views/layout.erb
+++ b/views/layout.erb
@@ -23,10 +23,10 @@
   <div id ="mobile">
     <a href="#" id="menu-icon"></a>
     <ul id = "mobilenav">
-      <li class="links"><a href="/">Home</a></li>
-      <li class="links"><a href="#allaboutme">About</a></li>
-      <li class="links"><a href="/posts">Blog</a></li>
-      <li class="links"><a href="#contactme">Contact</a></li>
+      <li><a class="links" href="/">Home</a></li>
+      <li><a class="links" href="#allaboutme">About</a></li>
+      <li><a class="links" href="/posts">Blog</a></li>
+      <li><a class="links" href="#contactme">Contact</a></li>
     </ul>
   </div>
 
