--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
     </ul>
   </nav>
   <div id ="mobile">
-    <a href="#" id="menu-icon"></a>
+    <a id="menu-icon"></a>
     <ul id = "mobilenav">
       <li><a class="links" href="/">Home</a></li>
       <li><a class="links" href="#allaboutme">About</a></li>
