--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,13 +2,14 @@ body {
   color: black;
   font-family: 'Abril Fatface';
   padding: 0;
-  margins: 0;
-  size: 100%;
+  margin: 0;
+  width: 100%;
   background: url('../images/wood2.jpg') repeat;
   background-size: 30%;
 }
 
 header {
+  margin-top: -10;
   width: 100%;
   /*background: #FC3F3F;*/
   color: white;
@@ -112,18 +113,20 @@ nav ul a:hover {
 }
 
 .textdiv {
+  margin-left: 0;
   margin-top: 90px;
   z-index: -5;
-  /*position: relative;*/
   color: white;
-  padding: 2%;
-  padding-top: .5%;
+  /*padding: 2%;
+  padding-top: .5%;*/
   background-color:rgba(0,0,0,0.6);
-  text-shadow: 2px 2px 2px black;
+  /*text-shadow: 2px 2px 2px black;*/
 }
 
 #aboutdiv {
   margin-top: 35%;
+  /*padding: 2%;
+  padding-top: .5%;*/
 }
 
 #aboutme {
@@ -139,26 +142,68 @@ nav ul a:hover {
   font-family: 'Questrial';
   text-align: center;
   letter-spacing: 1px;
+  padding: 2%;
+  padding-top: .5%;
 }
 
 .contactimage {
+  display: inline-block;
   transition-duration: 1s;
   -webkit-duration: 1s;
   -moz-duration: 1s;
   width: 80px;
   height: 80px;
-  margin: 1% 1.75% 1% 1.75%;
-  padding: 1% 1.75% 1% 1.75%;
+  /*margin: .5% 1.5% 3% 2.5%;
+  padding: .5% 1.5% 3% .5%;*/
+  /*margin: 1% 1.75% 1% 1.75%;
+  padding: 1% 1.75% 1% 1.75%;*/
+  /*margin-left: 5%;
+  margin-right: 5%;*/
+  margin: 3%;
+  padding: 0%;
+  /*margin-right: auto;*/
   }
 
 .contactimage:hover {
-  border: 3px solid red;
+  transition-duration: 1s;
+  -webkit-duration: 1s;
+  -moz-duration: 1s;
+  opacity: .6;
+}
+
+
+#contactdiv {
+  padding-left: 13%;
+  padding-right: 12%;
+
 }
 
 .title {
   text-align :center;
   font-size: 3em;
+  color: white;
 }
+
+.squarepic {
+  margin-left: auto;
+  margin-right:auto;
+  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+}
+
+#about {
+  box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  background: url('../images/falls3.jpg') ;
+  background-size: 100%;
+  width: 100%;
+  /*height: 20em;*/
+  height: 55%;
+  margin-bottom: 5%;
+}
+
 
 /*BLOG*/
 
@@ -184,6 +229,7 @@ nav ul a:hover {
 }
 
 .postbox {
+  /*display: none;*/
   /*margin-top: 90px;*/
   z-index: -5;
   /*position: relative;*/
@@ -219,6 +265,69 @@ nav ul a:hover {
 }
 .blogpage {
   display: hidden;
+}
+
+.posttext {
+  display: none;
+}
+
+#blogdiv {
+  margin-top: -10;
+}
+
+/*#blogpostdiv {
+
+}
+
+#maindate {
+  font-size: .5em;
+}
+#maintitle {
+  font-size: .5em;
+}*/
+
+#mainfulltext {
+  /*font-size: .7em;*/
+  margin-bottom: 5%;
+}
+
+.mainblogdiv {
+  margin-left: 0;
+  /*margin-top: 90px;*/
+  z-index: -5;
+  background-color:rgba(0,0,0,0.6);
+  padding-top: 1%;
+  padding-bottom: 1%;
+}
+
+#maintitlediv {
+  margin-top: 90px;
+}
+
+.fulltext {
+  margin: 20px;
+  text-align: center;
+  /*background-color: rgba(107,107,107,.7);*/
+  background: black;
+  width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: .75%;
+  font-size: 1.25em;
+  border-radius: 1.25em;
+  /*drop-shadow: 2px 2px 2px black;*/
+  color: white;
+  box-shadow: 2px 2px 4px white, -2px -2px 4px white;
+  transition-duration: 1s;
+  -webkit-duration: 1s;
+  -moz-duration: 1s;
+}
+
+.fulltext:hover {
+  color: grey;
+  transition-duration: 1s;
+  -webkit-duration: 1s;
+  -moz-duration: 1s;
 }
 
 #menu-icon {
@@ -268,6 +377,20 @@ nav ul a:hover {
   -moz-duration: 1s;
 }
 
+#byme {
+  text-align: center;
+  color: grey;
+  text-shadow: 1px 1px 5px black, -1px -1px 5px black;
+  font-size: 1.1em;
+
+}
+
+#bymediv {
+  /*background-color: rgb(252,252,252, .6);*/
+  margin-bottom: -20;
+  bottom: 0;
+  padding: .2%;
+}
 
 /*MEDIA QUERIES*/
 
@@ -362,6 +485,10 @@ nav ul a:hover {
     margin-top: 50%;
   }
 }
+
+/*.postbox {
+  display: none;
+}*/
 
 @media screen and (max-width: 568px) {
   #name {
