--- a/views/posts.erb
+++ b/views/posts.erb
@@ -5,7 +5,12 @@
 <% @posts.each do |post| %>
      <!-- <li class ="links" ><a class="posttitle" href= "<%= post.url %>"><%= post.title %></a></li>
      <li class ="links"><a class="postdate" href= "<%= post.url %>"><%= post.date %></a></li> -->
-     <p class="posttext"><%= post.post %></p>
-     <a class ="fulltext" href="<%= post.url %>">Read Full Post</a>
+  <div>
+     <div class="postdate"><%= post.written_date %></div>
+     <div class="posttitle"><%= post.written_title %></div>
+     <div class="posttext"><%= post.text %></div>
+     <div class ="fulltext"><a class = "readpost">Read Full Post</a></div>
+  </div>
+
 <% end %>
 </div>
