--- a/views/posts/post-1.erb
+++ b/views/posts/post-1.erb
@@ -1,12 +1,7 @@
-<div class= "datebox">
-  <h2 class="blogdate">September 24, 2014</h2>
-</div>
+<div class= "datebox"><h2 class="blogdate">September 24, 2014</h2></div>
 
-<div class= "titlebox">
-  <h1 class ="blogtitle">This is the title of a blog post</h1>
-</div>
+<div class= "titlebox"><h1 class ="blogtitle">This is the title of a blog post</h1></div>
 
+<div class = "postbox"><p class="post">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p></div>
 
-<div class = "postbox">
-  <p class="post">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-</div>
+<a class ="fulltext">Read Full Post</a>
