--- a/views/posts.erb
+++ b/views/posts.erb
@@ -9,7 +9,7 @@
      <div class="postdate"><%= post.written_date %></div>
      <div class="posttitle"><%= post.written_title %></div>
      <div class="posttext"><%= post.text %></div>
-     <div class ="fulltext"><a class = "readpost">Read Full Post</a></div>
+     <div class ="fulltext"><a class = "readpost">Full Post</a></div>
   </div>
 
 <% end %>
